--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,28 @@ body {
   padding: 0;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a.visted {
+  color: brown;
+}
+
+a.hover {
+  color: lightcoral;
+  cursor: pointer;
+}
+
+a.active {
+  color: coral;
+}
+
 h2 {
   font-size: 2.5em;
   padding-bottom: 30px;
+  line-height: 3rem;
 }
 
 p {
@@ -18,12 +37,12 @@ p {
 
 /* located inside root div */
 .header-box {
-  background-color: darkgreen;
+  background-color: dimgray;
   color: whitesmoke;
   font-size: 3em;
   text-transform: uppercase;
   text-align: center;
-  padding: 50px 0;
+  padding: 80px 0 40px 0;
 }
 
 /* located inside root div */
@@ -33,7 +52,7 @@ p {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  padding: 10%;
+  padding: 50px;
 }
 
 /* located inside details-box div */
@@ -42,7 +61,7 @@ p {
 }
 
 .text-fancy {
-  color: brown;
+  color: darkred;
 }
 
 /* located inside details-box div */
@@ -54,9 +73,11 @@ p {
 
 .vertical-line {
   width: 3px;
-  border-left: 1px solid whitesmoke;
+  height: 300px;
+  border-left: 3px dotted whitesmoke;
   margin: 0 0 0 30px;
   padding-right: 50px;
+  padding-top: 50px;
 }
 
 /* located inside details-box div */
@@ -74,11 +95,46 @@ p {
   padding-top: 30px;
 }
 
+.moreinfo-box {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0 50px;
+}
+
+.repo-h2 {
+  width: 200px;
+  height: 125px;
+  color: dimgray;
+  text-align: left;
+  margin: 50px;
+  padding: 0 25px 35px 25px;
+}
+
+.repo-box {
+  width: 200px;
+  height: 125px;
+  font-size: 1.5em;
+  line-height: 1.5rem;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 100;
+  border: 4px dotted lightcoral;
+  border-radius: 50px;
+  text-align: center;
+  align-content: center;
+  margin: 50px;
+  padding: 35px 25px;
+}
+
 /* located inside avatar-box div */
 .avatar {
-  max-width: 80%;
+  max-width: 60%;
   height: fit-content;
   align-items: right;
+}
+
+@media (max-width: 1500px) {
 }
 
 @media (max-width: 800px) {
@@ -94,7 +150,16 @@ p {
 
   .basics-box {
     max-width: 80%;
+    padding-top: 50px;
     padding-right: 0;
+  }
+
+  .vertical-line {
+    width: 0;
+    height: 0;
+    border-left: 0;
+    margin: 0;
+    padding: 0;
   }
 
   .story-box {
@@ -106,5 +171,32 @@ p {
     max-width: 80%;
     align-items: center;
     justify-content: center;
+  }
+
+  .moreinfo-box {
+    color: whitesmoke;
+    padding-top: 50px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+
+  .repo-h2 {
+    color: dimgray;
+    text-align: center;
+    margin: 50px;
+  }
+
+  .repo-box {
+    max-width: 80%;
+    min-width: 50px;
+    font-size: 1.5em;
+    font-family: "Work Sans", sans-serif;
+    font-weight: 100;
+    border: 4px dotted lightcoral;
+    border-radius: 50px;
+    text-align: center;
+    margin: 30px 50px;
+    padding: 40px;
   }
 }
